# The-Project-Formerly-Known-as-ExpressionEngine

./: .gitignore  Addition.cpp  Addition.h  ArithmeticExpression.cpp  ArithmeticExpression.h  CMakeLists.txt  Division.cpp  Division.h  Expression.cpp  Expression.h  HWK6_MARKSR2.cpp  IntegerExpression.cpp  IntegerExpression.h  LiteralExpression.cpp  LiteralExpression.h  Multiplication.cpp  Multiplication.h  MultiplicationExpression.cpp  MultiplicationExpression.h  Subtraction.cpp  Subtraction.h  main.cpp
